🎨 testing fix for overscroll on mobile

--- a/source/_partials/static/styles/app.css
+++ b/source/_partials/static/styles/app.css
@@ -223,10 +223,6 @@ select {
     scroll-behavior: auto !important;
   }
 }
-html {
-  color: currentColor;
-}
-
 body {
   font-family: var(--dcdw-2022-brand-dm-sans);
   font-size: var(--size-18);
@@ -1705,7 +1701,6 @@ input:checked + .slider:before {
 .layout-page.page-faq .mambo-hero {
   min-height: auto;
   display: block;
-  overflow: unset;
 }
 
 .layout-single-event .mambo-hero {
@@ -1835,7 +1830,7 @@ input:checked + .slider:before {
   right: 0;
   bottom: 0;
   left: 0;
-  transform: translate(-300px, -140px);
+  transform: translate(-300px, -180px);
 }
 
 .home-page-blob svg {
