--- a/source/static/styles/0-global/_reset-custom.scss
+++ b/source/static/styles/0-global/_reset-custom.scss
@@ -1,12 +1,3 @@
-// * {
-//   outline: dashed 1px red;
-//   outline-offset: -1px;
-// }
-
-html {
-  color: currentColor;
-}
-
 body {
   font-family: var(--dcdw-2022-brand-dm-sans);
   font-size: var(--size-18);
