--- a/source/static/styles/3-block/_hero.scss
+++ b/source/static/styles/3-block/_hero.scss
@@ -14,7 +14,6 @@
 .layout-page.page-faq .mambo-hero {
   min-height: auto;
   display: block;
-  overflow: unset;
 }
 
 .layout-single-event .mambo-hero {
@@ -153,7 +152,7 @@
   right: 0;
   bottom: 0;
   left: 0;
-  transform: translate(-300px, -140px);
+  transform: translate(-300px, -180px);
 }
 
 .home-page-blob svg {
